# agentic-data-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
code/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Required.md  docker-compose.yml  pyproject.toml
code/airflow/dags/: olist_pipeline.py
code/app/: config.py  main.py
code/app/agent/: core.py  router.py  tools.py
code/app/api/: deps.py  routes.py
code/app/api/v2/: __init__.py  routes.py  schemas.py  service.py
code/app/db/: provision_readonly.py  sql_safety.py
code/app/definitions/: __init__.py  business_glossary.py
code/app/ingestion/: __init__.py  loader.py
code/app/services/: query_service.py
code/app/transform/: __init__.py  serving.py  staging.py
code/app/ui/: __init__.py  capabilities.py  routes.py
code/app/ui/static/: ui.css  ui.js
code/app/ui/templates/: index.html
code/dbt/: dbt_project.yml  profiles.yml
code/dbt/models/marts/: delivery_performance_monthly.sql  dim_products.sql  fct_order_items.sql  fct_orders.sql  (+3 more)
code/dbt/tests/: test_raw_recency_sanity.sql  test_rowcount_staging_matches_raw.sql
code/docker/airflow/: Dockerfile
code/docs/: cloudflare_access.md
code/scripts/: bootstrap_data.sh  mock_api.py  run_e2e.sh
code/tests/integration/: test_api_contract.py  test_api_v2_contract.py  test_readiness_readonly_e2e.py  test_ui_contract.py
code/tests/unit/: test_api_deps_security.py  test_db_client.py  test_ingestion_loader.py  test_router.py  test_sql_safety.py  test_v2_chat_service.py
(+96 files in other folders)
